--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Single-Page Portal</h1>
+        <h1>Welcome to the OMAI Single-Page Portal</h1>
     </header>
     <main>
-        <button id="button1">Button 1</button>
-        <button id="button2">Button 2</button>
+        <button id="cgp">CGP</button>
+        <button id="doa">DOA</button>
     </main>
     <footer>
-        <p>&copy; 2023 Single-Page Portal</p>
+        <p>&copy; 2023 OMAI</p>
     </footer>
 </body>
 </html>
