--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single-Page Portal</title>
+    <title>OMAI-portal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to the OMAI Single-Page Portal</h1>
+        <h1>Welcome to the OMAI-portal</h1>
     </header>
     <main>
         <button id="cgp">CGP</button>
