--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the OMAI-portal, hello David!</h1>
+        <h1>Welcome to the OMAI-portal!</h1>
     </header>
     <main>
         <button id="cgp">CGP</button>
